--- a/tests/08_v2_workflow_job_concurrency_ascode.yml
+++ b/tests/08_v2_workflow_job_concurrency_ascode.yml
@@ -1,8 +1,8 @@
-name: Workflow Job Concurrency
+name: Workflow Job Concurrency As code
 vars:
-  cds_project: "ITV2JOBPROJECTCONCURRENCY"
-  git_repo: "it_v2_job_project_concurrency"
-  cds_workflow: "WorkflowJobProjectConcurrency"
+  cds_project: "ITV2JOBCONCURRENCYASCODE"
+  git_repo: "it_v2_job_woncurrency_ascode"
+  cds_workflow: "WorkflowJobConcurrencyAscode"
 testcases:
 - name: Prepare test
   steps:
@@ -42,20 +42,6 @@ testcases:
       git_password: "{{.git.password}}"
       git_repo: "{{.git_repo}}"
 
-- name: Create concurrency on project
-  steps:
-    - name: Create concurrency
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency add {{.cds_project}} my-concurrency-rule \"This is a concurrency rule\""
-    - name: List concurrency rule
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency list {{.cds_project}} --format json"
-      assertions:
-        - result.systemoutjson ShouldHaveLength 1
-        - result.systemoutjson.systemoutjson0.name ShouldEqual "my-concurrency-rule"
-    - name: Get concurrency rule
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency show {{.cds_project}} my-concurrency-rule --format json"
-      assertions:
-        - result.systemoutjson.name ShouldEqual "my-concurrency-rule"
-
 - name: Push workflow file
   steps:
     - type: v2_push_cds_files_on_repo
@@ -78,14 +64,14 @@ testcases:
           concurrencies:
           - name: ${{git.ref_name}}
           jobs:
-            matrix:
-              runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
-              concurrency: my-concurrency-rule
+            job1:
               strategy:
                 matrix:
                   os: [debian,ubuntu]
+              runs-on: {{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian
+              concurrency: ${{git.ref_name}}
               steps:
-              - run: sleep 10   
+                - run: sleep 10
     - name: Check CDS project analyses status
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
       assertions:
@@ -127,8 +113,3 @@ testcases:
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
       retry: 200
       delay: 1
-- name: Clean concurrency
-  steps:
-    - name: Delete concurrency rule
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project concurrency delete {{.cds_project}} my-concurrency-rule --force"
-      
