--- a/tests/lib/v2_add_git_repo.yml
+++ b/tests/lib/v2_add_git_repo.yml
@@ -50,7 +50,7 @@ steps:
           - result.systemoutjson.systemoutjson0.repoName ShouldEqual "{{.input.git_user}}/{{.input.git_repo}}"
 
   # Add webhook
-  - script: {{.input.cdsctl_command}} experimental project repository hook add {{.input.cds_project}} my_vcs_server {{.input.git_user}}/{{.input.git_repo}} --format json
+  - script: {{.input.cdsctl_command}} experimental project hooks add {{.input.cds_project}} my_vcs_server {{.input.git_user}}/{{.input.git_repo}} --format json
     vars:
       hookSecret:
         from: result.systemoutjson.hook_sign_key
